--- a/index.ipynb
+++ b/index.ipynb
@@ -34,10 +34,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 92,
+   "metadata": {},
    "outputs": [],
    "source": [
     "neighbors = [{'name': 'Fred', 'avenue': 4, 'street': 8}, {'name': 'Suzie', 'avenue': 1, 'street': 11}, \n",
@@ -54,25 +52,37 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
+   "execution_count": 93,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[{'name': 'Fred', 'avenue': 4, 'street': 8},\n",
+       " {'name': 'Suzie', 'avenue': 1, 'street': 11},\n",
+       " {'name': 'Bob', 'avenue': 5, 'street': 8},\n",
+       " {'name': 'Edgar', 'avenue': 6, 'street': 13},\n",
+       " {'name': 'Steven', 'avenue': 3, 'street': 6},\n",
+       " {'name': 'Natalie', 'avenue': 5, 'street': 4}]"
+      ]
+     },
+     "execution_count": 93,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "neighbors"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 120,
+   "metadata": {},
    "outputs": [],
    "source": [
     "fred = neighbors[0]\n",
-    "natalie = neighbors[5]"
+    "natalie = neighbors[5]\n"
    ]
   },
   {
@@ -84,7 +94,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 121,
    "metadata": {},
    "outputs": [
     {
@@ -141,10 +151,10 @@
        }
       },
       "text/html": [
-       "<div id=\"c2ae1a93-1edf-402b-80cc-67157c7f1697\" style=\"height: 525px; width: 100%;\" class=\"plotly-graph-div\"></div><script type=\"text/javascript\">require([\"plotly\"], function(Plotly) { window.PLOTLYENV=window.PLOTLYENV || {};window.PLOTLYENV.BASE_URL=\"https://plot.ly\";Plotly.newPlot(\"c2ae1a93-1edf-402b-80cc-67157c7f1697\", [{\"x\": [4, 1, 5, 6, 3, 5], \"y\": [8, 11, 8, 13, 6, 4], \"text\": [\"Fred\", \"Suzie\", \"Bob\", \"Edgar\", \"Steven\", \"Natalie\"], \"mode\": \"markers\"}], {\"xaxis\": {\"dtick\": 1}, \"yaxis\": {\"dtick\": 1}}, {\"showLink\": true, \"linkText\": \"Export to plot.ly\"})});</script>"
+       "<div id=\"d9f68657-99e9-42c3-b294-9b2429301706\" style=\"height: 525px; width: 100%;\" class=\"plotly-graph-div\"></div><script type=\"text/javascript\">require([\"plotly\"], function(Plotly) { window.PLOTLYENV=window.PLOTLYENV || {};window.PLOTLYENV.BASE_URL=\"https://plot.ly\";Plotly.newPlot(\"d9f68657-99e9-42c3-b294-9b2429301706\", [{\"x\": [4, 1, 5, 6, 3, 5], \"y\": [8, 11, 8, 13, 6, 4], \"text\": [\"Fred\", \"Suzie\", \"Bob\", \"Edgar\", \"Steven\", \"Natalie\"], \"mode\": \"markers\"}], {\"xaxis\": {\"dtick\": 1}, \"yaxis\": {\"dtick\": 1}}, {\"showLink\": true, \"linkText\": \"Export to plot.ly\"})});</script>"
       ],
       "text/vnd.plotly.v1+html": [
-       "<div id=\"c2ae1a93-1edf-402b-80cc-67157c7f1697\" style=\"height: 525px; width: 100%;\" class=\"plotly-graph-div\"></div><script type=\"text/javascript\">require([\"plotly\"], function(Plotly) { window.PLOTLYENV=window.PLOTLYENV || {};window.PLOTLYENV.BASE_URL=\"https://plot.ly\";Plotly.newPlot(\"c2ae1a93-1edf-402b-80cc-67157c7f1697\", [{\"x\": [4, 1, 5, 6, 3, 5], \"y\": [8, 11, 8, 13, 6, 4], \"text\": [\"Fred\", \"Suzie\", \"Bob\", \"Edgar\", \"Steven\", \"Natalie\"], \"mode\": \"markers\"}], {\"xaxis\": {\"dtick\": 1}, \"yaxis\": {\"dtick\": 1}}, {\"showLink\": true, \"linkText\": \"Export to plot.ly\"})});</script>"
+       "<div id=\"d9f68657-99e9-42c3-b294-9b2429301706\" style=\"height: 525px; width: 100%;\" class=\"plotly-graph-div\"></div><script type=\"text/javascript\">require([\"plotly\"], function(Plotly) { window.PLOTLYENV=window.PLOTLYENV || {};window.PLOTLYENV.BASE_URL=\"https://plot.ly\";Plotly.newPlot(\"d9f68657-99e9-42c3-b294-9b2429301706\", [{\"x\": [4, 1, 5, 6, 3, 5], \"y\": [8, 11, 8, 13, 6, 4], \"text\": [\"Fred\", \"Suzie\", \"Bob\", \"Edgar\", \"Steven\", \"Natalie\"], \"mode\": \"markers\"}], {\"xaxis\": {\"dtick\": 1}, \"yaxis\": {\"dtick\": 1}}, {\"showLink\": true, \"linkText\": \"Export to plot.ly\"})});</script>"
       ]
      },
      "metadata": {},
@@ -154,12 +164,12 @@
    "source": [
     "import plotly\n",
     "\n",
-    "plotly.offline.init_notebook_mode(connected=True)\n",
-    "trace0 = dict(x=list(map(lambda neighbor: neighbor['avenue'],neighbors)), \n",
-    "              y=list(map(lambda neighbor: neighbor['street'],neighbors)),\n",
-    "              text=list(map(lambda neighbor: neighbor['name'],neighbors)),\n",
-    "              mode='markers')\n",
-    "plotly.offline.iplot(dict(data=[trace0], layout={'xaxis': {'dtick': 1}, 'yaxis': {'dtick': 1}}))"
+    "plotly.offline.init_notebook_mode(connected = True)\n",
+    "trace0=dict(x= list(map(lambda neighbor: neighbor['avenue'], neighbors)),\n",
+    "           y=list(map(lambda neighbor: neighbor['street'], neighbors)),\n",
+    "           text = list(map(lambda neighbor: neighbor['name'], neighbors)),\n",
+    "           mode = 'markers')\n",
+    "plotly.offline.iplot(dict(data=[trace0], layout={'xaxis': {'dtick': 1}, 'yaxis': {'dtick': 1}}))\n"
    ]
   },
   {
@@ -192,14 +202,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 122,
+   "metadata": {},
    "outputs": [],
    "source": [
     "def street_distance(first_neighbor, second_neighbor):\n",
-    "    pass"
+    "    return first_neighbor['street'] - second_neighbor['street'] \n",
+    "    "
    ]
   },
   {
@@ -211,11 +220,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
+   "execution_count": 124,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "4"
+      ]
+     },
+     "execution_count": 124,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "street_distance(fred, natalie) # 4"
    ]
@@ -229,23 +247,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 120,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 125,
+   "metadata": {},
    "outputs": [],
    "source": [
     "def avenue_distance(first_neighbor, second_neighbor):\n",
-    "    pass"
+    "    return abs(first_neighbor['avenue'] - second_neighbor['avenue'])"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 121,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
+   "execution_count": 126,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "1"
+      ]
+     },
+     "execution_count": 126,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "avenue_distance(fred, natalie) #  1"
    ]
@@ -266,23 +291,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 122,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 127,
+   "metadata": {},
    "outputs": [],
    "source": [
     "def distance_between_neighbors_squared(first_neighbor, second_neighbor):\n",
-    "    pass"
+    "    return street_distance(first_neighbor , second_neighbor)**2 + avenue_distance(first_neighbor, second_neighbor)**2"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 123,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
+   "execution_count": 128,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "17"
+      ]
+     },
+     "execution_count": 128,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "distance_between_neighbors_squared(fred, natalie) # 17"
    ]
@@ -303,24 +335,31 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 129,
+   "metadata": {},
    "outputs": [],
    "source": [
     "import math\n",
     "def distance(first_neighbor, second_neighbor):\n",
-    "    pass"
+    "    return math.sqrt(distance_between_neighbors_squared(first_neighbor, second_neighbor))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
+   "execution_count": 130,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "4.123105625617661"
+      ]
+     },
+     "execution_count": 130,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "distance(fred, natalie) # 4.123105625617661"
    ]
@@ -350,11 +389,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
+   "execution_count": 131,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[0.0,\n",
+       " 4.242640687119285,\n",
+       " 1.0,\n",
+       " 5.385164807134504,\n",
+       " 2.23606797749979,\n",
+       " 4.123105625617661]"
+      ]
+     },
+     "execution_count": 131,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "distances = []\n",
     "for neighbor in neighbors:\n",
@@ -375,24 +428,34 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 130,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 132,
+   "metadata": {},
    "outputs": [],
    "source": [
     "import math\n",
     "def distance_with_neighbor(first_neighbor, second_neighbor):\n",
-    "    pass"
+    "    neighbor_with_distance = second_neighbor.copy()\n",
+    "    distance = math.sqrt(distance_between_neighbors_squared(first_neighbor , second_neighbor))\n",
+    "    neighbor_with_distance['distance'] = distance\n",
+    "    return neighbor_with_distance "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 131,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
+   "execution_count": 133,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'name': 'Natalie', 'avenue': 5, 'street': 4, 'distance': 4.123105625617661}"
+      ]
+     },
+     "execution_count": 133,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "distance_with_neighbor(fred, natalie)\n",
     "# {'avenue': 5, 'distance': 4.123105625617661, 'name': 'Natalie', 'street': 4}"
@@ -407,23 +470,35 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 132,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 142,
+   "metadata": {},
    "outputs": [],
    "source": [
     "def distance_all(first_neighbor, neighbors):\n",
-    "    pass"
+    "    remaining_neighbors = list(filter(lambda neighbor: neighbor != first_neighbor, neighbors))\n",
+    "    return list(map(lambda neighbor: distance_with_neighbor(first_neighbor, neighbor) , remaining_neighbors))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 133,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
+   "execution_count": 143,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[{'name': 'Suzie', 'avenue': 1, 'street': 11, 'distance': 4.242640687119285},\n",
+       " {'name': 'Bob', 'avenue': 5, 'street': 8, 'distance': 1.0},\n",
+       " {'name': 'Edgar', 'avenue': 6, 'street': 13, 'distance': 5.385164807134504},\n",
+       " {'name': 'Steven', 'avenue': 3, 'street': 6, 'distance': 2.23606797749979},\n",
+       " {'name': 'Natalie', 'avenue': 5, 'street': 4, 'distance': 4.123105625617661}]"
+      ]
+     },
+     "execution_count": 143,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "distance_all(fred, neighbors)\n",
     "\n",
@@ -443,10 +518,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 144,
+   "metadata": {},
    "outputs": [],
    "source": [
     "def nearest_neighbors(first_neighbor, neighbors, number = None):\n",
@@ -455,10 +528,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 145,
+   "metadata": {},
    "outputs": [],
    "source": [
     "nearest_neighbors(fred, neighbors, 2)\n",
